src/main/java/com/example/socialmediaapi/response/error/UserNotFoundException.java
package com.example.socialmediaapi.response.error;

public class UserNotFoundException extends RuntimeException{
    public UserNotFoundException(String message)
    {
        super(message);
    }
}
